Ajout button Login et register

--- a/Final actuel/HTML/HTMLAdminProject.html
+++ b/Final actuel/HTML/HTMLAdminProject.html
@@ -27,7 +27,11 @@
                     <span onclick="NightM()"><img src="../image/nightmode.png" alt="" id="moon"></span>
                 </div>
                 <div class="collapse navbar-collapse" id="mobileNav">
-                    <div ><a class="navbar-links page" id="display" href="Login.html">login | register</a></div>
+                    <h6 id="name"></h6>
+                    <div><button class="button1" id="login" style="vertical-align:middle"><span>Login</span></button>
+                    <button class="button1" id="register" style="vertical-align:middle"><span>register </span></button>
+                     <div><button class="button1" id="logout" style="vertical-align:middle"><span>Logout </span></button>
+                    </div>
                     <a class="navbar-links page" href="project.html"> Project</a> <br>
                     <a class="navbar-links page" href="HTMLAdminEstimate.html"> Devis</a> <br>
                 </div>
