autocomplete="off" sur input

--- a/Final actuel/HTML/Login.html
+++ b/Final actuel/HTML/Login.html
@@ -19,11 +19,11 @@
                     <span id="errorLogin" class=""></span>
                     <div class="field">
                         <span class="fa fa-user"></span>
-                        <input type="text"  id="username" placeholder="Username" required>
+                        <input type="text"  id="username" placeholder="Username" autocomplete="off" required>
                     </div>
                     <div class="field space">
                         <span class="fa fa-lock"></span>
-                        <input type="password" class="pass-key" id="password"  placeholder="Password" required>
+                        <input type="password" class="pass-key" id="password"  placeholder="Password" autocomplete="off" required>
                         <span class="show"></span>
                     </div>
                    
