ajout dans le popup

--- a/Final actuel/HTML/Estimate.html
+++ b/Final actuel/HTML/Estimate.html
@@ -235,7 +235,7 @@
             <section class="resume">
 
                 <div id="resume_title">Le devis</div>
-                <div>Dimensions de la pièce : <p id="resume_length" class='resume_lwh'></p>x<p id="resume_width" class='resume_lwh'></p>x<p id="resume_heigth" class='resume_lwh'></p></div>
+                <div id="resume_dimensions">Dimensions de la pièce : <p id="resume_length" class='resume_lwh'></p>x<p id="resume_width" class='resume_lwh'></p>x<p id="resume_heigth" class='resume_lwh'></p></div>
                 <div>Vous avez choisis<p id="resume_nbColor"></p>couleur(s) pour les murs</div>
 
                 <div class="resume_color" id="resume_color1"></div>
@@ -300,8 +300,17 @@
 					
                 </section>
 
-
-
+                <div id="resume_price">Estimation du prix de la prestation :<p id="resume_price_value">111</p>€</div>
+                <div class="buttonEnd">
+                    <a>
+    <span class="text">Enregistrer et envoyer</span>
+    <span class="line -right"></span>
+    <span class="line -top"></span>
+    <span class="line -left"></span>
+    <span class="line -bottom"></span>
+    
+  </a>
+                </div>
 
 			</section>
 			</div>
@@ -348,7 +357,7 @@
         </div>
     </body>
     <script src="../JS/estimate.js" type="text/javascript"></script>
-  <!--  <script src="../Admin/JS/ApercuEstimate.js" type="text/javascript"></script>-->
+  <!--<script src="../Admin/JS/ApercuEstimate.js" type="text/javascript"></script>-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
