--- a/Final actuel/HTML/commentaire.html
+++ b/Final actuel/HTML/commentaire.html
@@ -135,6 +135,8 @@ and open the template in the editor.
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="../JS/JSNavBarPetit.js" type="text/javascript"></script>
+        <script src="../JS/jscom.js" type="text/javascript"></script>
+
 </body>
 
 </html>
