--- a/Final actuel/HTML/Estimate.html
+++ b/Final actuel/HTML/Estimate.html
@@ -361,6 +361,7 @@
         </div>
     </body>
     <script src="../JS/estimate.js" type="text/javascript"></script>
+    <script src="../JS/Btnlogin.js" type="text/javascript"></script>
   <!--<script src="../Admin/JS/ApercuEstimate.js" type="text/javascript"></script>-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
