Autocomplete="off" change

--- a/Final actuel/HTML/Login.html
+++ b/Final actuel/HTML/Login.html
@@ -17,17 +17,17 @@
                 <hr>
                 <form class="login" method="POST">
                     <span id="errorLogin" class=""></span>
-                    <div class="field">
+                    <div class="input">
                         <span class="fa fa-user"></span>
                         <input type="text"  id="username" placeholder="Username" autocomplete="off" required>
                     </div>
-                    <div class="field space">
+                    <div class="input space">
                         <span class="fa fa-lock"></span>
-                        <input type="password" class="pass-key" id="password"  placeholder="Password" autocomplete="off" required>
+                        <input type="password" class="Password" id="password"  placeholder="Password" autocomplete="off" required>
                         <span class="show"></span>
                     </div>
                    
-                    <div class="field">
+                    <div class="input">
                        <button type="button" class="button" onClick="login()">Sign in</button>
                     </div>
                 </form>
@@ -41,4 +41,5 @@
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     </body>
 </html>
+
 
