Autocomplete="off" change

--- a/Final actuel/HTML/register.html
+++ b/Final actuel/HTML/register.html
@@ -17,18 +17,18 @@
                 <br>
                 <form class="register" method="POST">
                     <span id="errorNom" class=""></span>
-                    <div class="field">
+                    <div class="input">
                         <span class="fa fa-user"></span>
                         <input type="text"  id="NewUserName"  placeholder="Username" autocomplete="off" required>
                     </div>
-                    <div class="field space">
+                    <div class="input space">
                         <span class="fa fa-lock"></span>
-                        <input type="password" class="pass-key" id="NewUserPassword"  placeholder="Password" autocomplete="off" required>
+                        <input type="password" class="Password" id="NewUserPassword"  placeholder="Password" autocomplete="off" required>
                         <span class="show"></span>
                     </div>
                     <span id="errorPassword" class=""></span>
                     <br>
-                    <div class="field">
+                    <div class="input">
                         <button type="button"  onClick="register()">Register</button>
                     </div>
                 </form>
@@ -44,3 +44,4 @@
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     </body>
 </html>
+
