--- a/Final actuel/HTML/project.html
+++ b/Final actuel/HTML/project.html
@@ -23,7 +23,7 @@
                         <!-- <span class="sr-only">Toggle navigation</span> -->
                         <span class="icon-bar"><i class="fa fa-angle-double-down mr-1"></i></span>      
                     </button> 
-                    <a class="navbar-brand" href="Accueil.html">Kebab master</a>
+                    <a class="navbar-brand" href="Accueil.html">Home design</a>
                     <span onclick="NightM()"><img src="../image/nightmode.png" alt="" id="moon"></span>
                 </div>
                 <div class="collapse navbar-collapse" id="mobileNav">
