--- a/Final actuel/HTML/HTMLAdminEstimate.html
+++ b/Final actuel/HTML/HTMLAdminEstimate.html
@@ -39,7 +39,24 @@
             </div>
         </nav>
         <div class="overlay">
-            <img id="Img_caroussel_2" src="../image/IMG_2434.jpg" class="d-block w-100" alt="...">
+                        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img id="Img_caroussel_1" src="../image/photo-of-living-room-1457842.jpg" class="d-block w-100 h-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img id="Img_caroussel_2" src="../image/interior-design-of-home-1643383.jpg" class="d-block w-100 h-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img id="Img_caroussel_3" src="../image/apartment-bed-bedroom-book-shelves-439227.jpg" class="d-block w-100 h-100" alt="...">
+                    </div>
+                </div>
+            </div>
             
     <h2 id="title"><label for="Title">Title :</label><input type="text" class="Change_input" id="Title"></h2>
     <br><br>
