--- a/Final actuel/HTML/project.html
+++ b/Final actuel/HTML/project.html
@@ -38,7 +38,7 @@
             </div>
         </nav>
         <div class="overlay">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -46,13 +46,13 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img id="Img_caroussel_1" src="../image/69786526_2330927653841643_3051100133778259968_n.jpg" class="d-block w-100" alt="...">
+                        <img id="Img_caroussel_1" src="../image/photo-of-living-room-1457842.jpg" class="d-block w-100 h-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img id="Img_caroussel_2" src="../image/IMG_2434.jpg" class="d-block w-100" alt="...">
+                        <img id="Img_caroussel_2" src="../image/interior-design-of-home-1643383.jpg" class="d-block w-100 h-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img id="Img_caroussel_3" src="../image/IMG_2441-2.jpg" class="d-block w-100" alt="...">
+                        <img id="Img_caroussel_3" src="../image/apartment-bed-bedroom-book-shelves-439227.jpg" class="d-block w-100 h-100" alt="...">
                     </div>
                 </div>
             </div>
