Ajout class="subtitle"

--- a/Final actuel/HTML/HTMLAdminEstimate.html
+++ b/Final actuel/HTML/HTMLAdminEstimate.html
@@ -58,11 +58,11 @@
                 </div>
             </div>
             
-    <h2 id="title"><label for="Title">Title :</label><input type="text" class="Change_input" id="Title"></h2>
+    <h2 id="title" class="subtitle"><label for="Title">Title :</label><input type="text" class="Change_input" id="Title"></h2>
     <br><br>
 
  <!--   <h3 id="Subtitle_1">Description</h3>-->
- <hr><p class="on_hr"><span><label for="Title1">Title 1 :</label><input type="text" class="Change_input" id="Title1"></span></p>
+ <hr><p class="on_hr"><span class="subtitle"><label for="Title1">Title 1 :</label><input type="text" class="Change_input" id="Title1"></span></p>
     <br>
 
 <section>
@@ -75,7 +75,7 @@
 <br>
 
   <!--  <h3 id="Subtitle_2">Choices</h3>-->
-  <hr><p class="on_hr"><span><label for="Title2">Title 2 :</label><input type="text" class="Change_input" id="Title2"></span></p>
+  <hr><p class="on_hr"><span class="subtitle"><label for="Title2">Title 2 :</label><input type="text" class="Change_input" id="Title2"></span></p>
  
 <section>
     <section class="section_left">
@@ -95,7 +95,7 @@
     </section>      
 </section>
 </br>
-<hr><p class="on_hr"><span><label for="Title3">Title 3 :</label><input type="text" class="Change_input" id="Title3"></span></p>
+<hr><p class="on_hr"><span class="subtitle"><label for="Title3">Title 3 :</label><input type="text" class="Change_input" id="Title3"></span></p>
     <section>
         <div>You have to choice the kind of furniture, and chose your(s) favorite(s) one(s)</div>
         <form id="form_furniture" action="">
@@ -199,7 +199,7 @@
         </form>
     </section>
 
-    <hr><p class="on_hr"><span><label for="Title4">Title 4 :</label><input type="text" class="Change_input" id="Title4"></span></p>
+    <hr><p class="on_hr"><span class="subtitle"><label for="Title4">Title 4 :</label><input type="text" class="Change_input" id="Title4"></span></p>
 
     <div class="container">
         <ul>
