--- a/Final actuel/HTML/Contact.html
+++ b/Final actuel/HTML/Contact.html
@@ -7,7 +7,7 @@ and open the template in the editor.
 <html>
 
 <head>
-    <title>Contact</title>
+    <title>Home Design - Contactez-nous</title>
     <meta charset="UTF-8">
     <link href="../../../../../Desktop/ISEN/WebDev/projet-final-N1-master/LOIC_2.0/csscontact.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,19 +27,19 @@ and open the template in the editor.
                     <!-- <span class="sr-only">Toggle navigation</span> -->
                     <span class="icon-bar"><i class="fa fa-angle-double-down mr-1"></i></span>
                 </button>
-                <a class="navbar-brand" href="Accueil.html">Kebab master</a>
+                <a class="navbar-brand" href="Accueil.html">Home design</a>
                 <span onclick="NightM()"><img src="../image/nightmode.png" alt="" id="moon"></span>
             </div>
             <div class="collapse navbar-collapse" id="mobileNav">
                 <h6 id="name"></h6>
-                    <div><button class="button1" id="login" style="vertical-align:middle"><span>Login</span></button>
+                <div><button class="button1" id="login" style="vertical-align:middle"><span>Login</span></button>
                     <button class="button1" id="register" style="vertical-align:middle"><span>register </span></button>
                     <div><button class="button1" id="logout" style="vertical-align:middle"><span>Logout </span></button>
                     </div>
-                <a class="navbar-links page" href="project.html"> Project</a> <br>
-                <a class="navbar-links page" href="Estimate.html"> Devis</a> <br>
+                    <a class="navbar-links page" href="project.html"> Project</a> <br>
+                    <a class="navbar-links page" href="Estimate.html"> Devis</a> <br>
+                </div>
             </div>
-        </div>
     </nav>
     <div class='overlay'>
         <div class="container">
@@ -138,8 +138,8 @@ and open the template in the editor.
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-xs-12 about-company">
-                    <h2 class="footerTitle2">Heading</h2>
-                    <p class="pr-5 text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac ante mollis quam tristique convallis </p>
+                    <h2 class="footerTitle2">Home Design</h2>
+                    <p class="pr-5 text-white-50">Home Design est un site d'architecture intérieure pour vous aider à trouver, ou retrouver, le rayon de soleil qui manque à votre chez vous. </p>
                     <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i class="fa fa-linkedin-square"></i></a></p>
                 </div>
                 <div class="col-lg-3 col-xs-12 links">
@@ -149,20 +149,18 @@ and open the template in the editor.
                         <li>- <a href="report.html">Report a problem</a></li>
                         <li>- <a href="commentaire.html">Commentaires</a></li>
                         <li>- <a href="Login.html">Login</a></li>
-                        <li>- <a href="#">Sed faucibus</a></li>
-                        <li>- <a href="#">Mauris efficitur nulla</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-xs-12 location">
                     <h4 class="mt-lg-0 mt-sm-4">Location</h4>
-                    <p>22, Lorem ipsum dolor, consectetur adipiscing</p>
-                    <p class="mb-0"><i class="fa fa-phone mr-3"></i>(541) 754-3010</p>
-                    <p><i class="fa fa-envelope-o mr-3"></i>info@hsdf.com</p>
+                    <p>Toulon, France</p>
+                    <p class="mb-0"><i class="fa fa-phone mr-3"></i>04.91.52.87.56</p>
+                    <p><i class="fa fa-envelope-o mr-3"></i>ContactHD@Homedesign.com</p>
                 </div>
             </div>
             <div class="row mt-5">
                 <div class="col copyright">
-                    <p class=""><small class="text-white-50">© 2019. All Rights Reserved.</small></p>
+                    <p class=""><small class="text-white-50"></small></p>
                 </div>
             </div>
         </div>
