--- a/Final actuel/HTML/Login.html
+++ b/Final actuel/HTML/Login.html
@@ -1,45 +1,46 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-             <link href="../font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
-        <link href="../CSS/Login.css" rel="stylesheet" type="text/css"/>
 
-    </head>
-    <body>
- 
-        <div class="bg-img">
-            <div class="content">
-                <h1>Login </h1>
-                <hr>
-                <form class="login" method="POST">
-                    <span id="errorLogin" class=""></span>
-                    <div class="input">
-                        <span class="fa fa-user"></span>
-                        <input type="text"  id="username" placeholder="Username" autocomplete="off" required>
-                    </div>
-                    <div class="input space">
-                        <span class="fa fa-lock"></span>
-                        <input type="password" class="Password" id="password"  placeholder="Password" autocomplete="off" required>
-                        <span class="show"></span>
-                    </div>
-                   
-                    <div class="input">
-                       <button type="button" class="button" onClick="login()">Sign in</button>
-                    </div>
-                </form>
-                <div class="signup">Don't have account?
-                    <a href="register.html">Signup Now</a>
+<head>
+    <title>Home Design - Connexion</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="../CSS/Login.css" rel="stylesheet" type="text/css" />
+
+</head>
+
+<body>
+
+    <div class="bg-img">
+        <div class="content">
+            <h1>Login </h1>
+            <hr>
+            <form class="login" method="POST">
+                <span id="errorLogin" class=""></span>
+                <div class="input">
+                    <span class="fa fa-user"></span>
+                    <input type="text" id="username" placeholder="Username" autocomplete="off" required>
                 </div>
-                <hr>
+                <div class="input space">
+                    <span class="fa fa-lock"></span>
+                    <input type="password" class="Password" id="password" placeholder="Password" autocomplete="off" required>
+                    <span class="show"></span>
+                </div>
+
+                <div class="input">
+                    <button type="button" class="button" onClick="login()">Sign in</button>
+                </div>
+            </form>
+            <div class="signup">Don't have account?
+                <a href="register.html">Signup Now</a>
             </div>
+            <hr>
         </div>
-        <script src="../JS/login.js" type="text/javascript"></script>
-        <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    </body>
+    </div>
+    <script src="../JS/login.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+</body>
+
 </html>
-
-
