--- a/Final actuel/HTML/register.html
+++ b/Final actuel/HTML/register.html
@@ -1,47 +1,49 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="../font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
-        <link href="../CSS/Login.css" rel="stylesheet" type="text/css"/>
-    </head>
-    <body>
 
-        <div class="bg-img">
-            <div class="content">
-                <h1>Register</h1>
-                <hr>
-                <br>
-                <form class="register" method="POST">
-                    <span id="errorNom" class=""></span>
-                    <div class="input">
-                        <span class="fa fa-user"></span>
-                        <input type="text"  id="NewUserName"  placeholder="Username" autocomplete="off" required>
-                    </div>
-                    <div class="input space">
-                        <span class="fa fa-lock"></span>
-                        <input type="password" class="Password" id="NewUserPassword"  placeholder="Password" autocomplete="off" required>
-                        <span class="show"></span>
-                    </div>
-                    <span id="errorPassword" class=""></span>
-                    <br>
-                    <div class="input">
-                        <button type="button"  onClick="register()">Register</button>
-                    </div>
-                </form>
-                <br>
-                <div class="signup">Do you have an account?
-                    <a href="Login.html">log in</a>
+<head>
+    <title>Home Design - S'inscrire</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="../CSS/Login.css" rel="stylesheet" type="text/css" />
+</head>
 
+<body>
+
+    <div class="bg-img">
+        <div class="content">
+            <h1>Register</h1>
+            <hr>
+            <br>
+            <form class="register" method="POST">
+                <span id="errorNom" class=""></span>
+                <div class="input">
+                    <span class="fa fa-user"></span>
+                    <input type="text" id="NewUserName" placeholder="Username" autocomplete="off" required>
                 </div>
-                <hr>
-            </div>
-        </div>
-        <script src="../JS/login.js" type="text/javascript"></script>
-        <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    </body>
-</html>
+                <div class="input space">
+                    <span class="fa fa-lock"></span>
+                    <input type="password" class="Password" id="NewUserPassword" placeholder="Password" autocomplete="off" required>
+                    <span class="show"></span>
+                </div>
+                <span id="errorPassword" class=""></span>
+                <br>
+                <div class="input">
+                    <button type="button" onClick="register()">Register</button>
+                </div>
+            </form>
+            <br>
+            <div class="signup">Do you have an account?
+                <a href="Login.html">log in</a>
 
+            </div>
+            <hr>
+        </div>
+    </div>
+    <script src="../JS/login.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+</body>
+
+</html>
