--- a/Final actuel/HTML/report.html
+++ b/Final actuel/HTML/report.html
@@ -5,46 +5,49 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <html>
-    <head>
-        <title>Report a problem</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-        <link href="../CSS/navbar.css" rel="stylesheet" type="text/css"/>
-        <link href="../CSS/nmode.css" rel="stylesheet" type="text/css"/>
-        <link href="../CSS/cssreport.css" rel="stylesheet" type="text/css"/>
-        <link href="../font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+
+<head>
+    <title>Home Design - Signaler un problème</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="../CSS/navbar.css" rel="stylesheet" type="text/css" />
+    <link href="../CSS/nmode.css" rel="stylesheet" type="text/css" />
+    <link href="../CSS/cssreport.css" rel="stylesheet" type="text/css" />
+    <link href="../font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 
 
-    <body>
-      <nav class="navbar navbar-fixed-top navbar--color--ghost navbar--size--xl" data-startColor="navbar--color--ghost" data-startSize="navbar--size--xl" data-intoColor="navbar--color--secondary" data-intoSize="navbar--size--md" style="padding-top:15px;padding-bottom:15px;">
-          <div class="container-nav">
-              <div class="navbar-header">
-                  <button class="navbar-toggle collapsed buton" type="button" data-toggle="collapse" data-target="#mobileNav" aria-expanded="false">
-                      <!-- <span class="sr-only">Toggle navigation</span> -->
-                      <span class="icon-bar"><i class="fa fa-angle-double-down mr-1"></i></span>
-                  </button>
-                  <a class="navbar-brand" href="Accueil.html">Kebab master</a>
-                  <span onclick="NightM()"><img src="../image/nightmode.png" alt="" id="moon"></span>
-              </div>
-              <div class="collapse navbar-collapse" id="mobileNav">
-                  <h6 id="name"></h6>
-                    <div><button class="button1" id="login" style="vertical-align:middle"><span>Login</span></button>
+<body>
+    <nav class="navbar navbar-fixed-top navbar--color--ghost navbar--size--xl" data-startColor="navbar--color--ghost" data-startSize="navbar--size--xl" data-intoColor="navbar--color--secondary" data-intoSize="navbar--size--md" style="padding-top:15px;padding-bottom:15px;">
+        <div class="container-nav">
+            <div class="navbar-header">
+                <button class="navbar-toggle collapsed buton" type="button" data-toggle="collapse" data-target="#mobileNav" aria-expanded="false">
+                    <!-- <span class="sr-only">Toggle navigation</span> -->
+                    <span class="icon-bar"><i class="fa fa-angle-double-down mr-1"></i></span>
+                </button>
+                <a class="navbar-brand" href="Accueil.html">Home Design</a>
+                <span onclick="NightM()"><img src="../image/nightmode.png" alt="" id="moon"></span>
+            </div>
+            <div class="collapse navbar-collapse" id="mobileNav">
+                <h6 id="name"></h6>
+                <div><button class="button1" id="login" style="vertical-align:middle"><span>Login</span></button>
                     <button class="button1" id="register" style="vertical-align:middle"><span>register </span></button>
                     <div><button class="button1" id="logout" style="vertical-align:middle"><span>Logout </span></button>
                     </div>
-                  <a class="navbar-links page" href="project.html"> Project</a> <br>
-                  <a class="navbar-links page" href="Estimate.html"> Devis</a> <br>
-              </div>
-          </div>
-      </nav>
-      <div class='overlay'>
+                    <a class="navbar-links page" href="project.html"> Project</a> <br>
+                    <a class="navbar-links page" href="Estimate.html"> Devis</a> <br>
+                </div>
+            </div>
+    </nav>
+    <div class='overlay'>
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
                     <div class="card bg-dark mb-3" style="width:80% ; margin-top: 15em; margin-left:10%;">
-                        <div class="card-header"><h4 >Un problemes rencontré ?</h4></div>
+                        <div class="card-header">
+                            <h4>Un problemes rencontré ?</h4>
+                        </div>
                         <div class="card-body c1">
 
 
@@ -54,7 +57,8 @@ and open the template in the editor.
 
 
 
-                                <label  id="report1" class="obligatoire" for="probleme" >Quel est le probleme :</label><br><!--permet de choisir grace à un choix multiple une unique information ici la langue de la reponce-->
+                                <label id="report1" class="obligatoire" for="probleme">Quel est le probleme :</label><br>
+                                <!--permet de choisir grace à un choix multiple une unique information ici la langue de la reponce-->
                                 <input id="choix" type="radio" name="probleme" value="aff">mon probleme est sur l'affichage d'une page<br>
                                 <input id="choix" type="radio" name="probleme" value="com">mon probleme est dans un commentaire inaproprié<br>
                                 <input id="choix" type="radio" name="probleme" value="cop">mon probleme est un copy right d'une photo<br>
@@ -66,12 +70,13 @@ and open the template in the editor.
 
                                 <label id="report2" for="msg">plus d'information :</label></br>
 
-                                <textarea id="msg" name="message" onInput="Verifmessage()" rows="5"></textarea><!--crée une zone de texte pour envoyer un message-->
+                                <textarea id="msg" name="message" onInput="Verifmessage()" rows="5"></textarea>
+                                <!--crée une zone de texte pour envoyer un message-->
                                 </br></br>
 
-                                <div >
+                                <div>
                                     <label id="report3" class="obligatoire" for="email">Email :</label>
-                                    <input  class="form" type='email' onInput="Verifemail()" id='email' name='emailaddress' autocomplete="off" >
+                                    <input class="form" type='email' onInput="Verifemail()" id='email' name='emailaddress' autocomplete="off">
 
                                 </div><br>
 
@@ -91,47 +96,46 @@ and open the template in the editor.
             </div>
         </div>
 
-<div class="mt-5 pt-5 pb-5 footer">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-5 col-xs-12 about-company">
-                            <h2 class="footerTitle2">Heading</h2>
-                            <p class="pr-5 text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac ante mollis quam tristique convallis </p>
-                            <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i class="fa fa-linkedin-square"></i></a></p>
-                        </div>
-                        <div class="col-lg-3 col-xs-12 links">
-                            <h4 class="mt-lg-0 mt-sm-3">Links</h4>
-                            <ul class="m-0 p-0">
-                                <li>- <a href="Contact.html">Contact</a></li>
-                                <li>- <a href="report.html">Report a problem</a></li>
-                                <li>- <a href="commentaire.html">Commentaires</a></li>
-                                <li>- <a href="Login.html">Login</a></li>
-                                <li>- <a href="#">Sed faucibus</a></li>
-                                <li>- <a href="#">Mauris efficitur nulla</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-lg-4 col-xs-12 location">
-                            <h4 class="mt-lg-0 mt-sm-4">Location</h4>
-                            <p>22, Lorem ipsum dolor, consectetur adipiscing</p>
-                            <p class="mb-0"><i class="fa fa-phone mr-3"></i>(541) 754-3010</p>
-                            <p><i class="fa fa-envelope-o mr-3"></i>info@hsdf.com</p>
-                        </div>
+        <div class="mt-5 pt-5 pb-5 footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-5 col-xs-12 about-company">
+                        <h2 class="footerTitle2">Home Design</h2>
+                        <p class="pr-5 text-white-50">Home Design est un site d'architecture intérieure pour vous aider à trouver, ou retrouver, le rayon de soleil qui manque à votre chez vous. </p>
+                        <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i class="fa fa-linkedin-square"></i></a></p>
                     </div>
-                    <div class="row mt-5">
-                        <div class="col copyright">
-                            <p class=""><small class="text-white-50">© 2019. All Rights Reserved.</small></p>
-                        </div>
+                    <div class="col-lg-3 col-xs-12 links">
+                        <h4 class="mt-lg-0 mt-sm-3">Links</h4>
+                        <ul class="m-0 p-0">
+                            <li>- <a href="Contact.html">Contact</a></li>
+                            <li>- <a href="report.html">Report a problem</a></li>
+                            <li>- <a href="commentaire.html">Commentaires</a></li>
+                            <li>- <a href="Login.html">Login</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-4 col-xs-12 location">
+                        <h4 class="mt-lg-0 mt-sm-4">Location</h4>
+                        <p>Toulon, France</p>
+                        <p class="mb-0"><i class="fa fa-phone mr-3"></i>04.91.52.87.56</p>
+                        <p><i class="fa fa-envelope-o mr-3"></i>ContactHD@Homedesign.com</p>
+                    </div>
+                </div>
+                <div class="row mt-5">
+                    <div class="col copyright">
+                        <p class=""><small class="text-white-50"></small></p>
                     </div>
                 </div>
             </div>
         </div>
-        <script src="../JS/Btnlogin.js" type="text/javascript"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-        <script src="../JS/jsreport.js" type="text/javascript"></script>
-        <script src="../JS/JSNavBarPetit.js" type="text/javascript"></script>
-    </body>
+    </div>
+    <script src="../JS/Btnlogin.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="../JS/jsreport.js" type="text/javascript"></script>
+    <script src="../JS/JSNavBarPetit.js" type="text/javascript"></script>
+</body>
+
 </html>
