--- a/Final actuel/HTML/Accueil.html
+++ b/Final actuel/HTML/Accueil.html
@@ -93,7 +93,7 @@
                     <img src="../image/app1.jpg" class="image" alt="" />
                 </div>
                 <div class="pres_right textr" data-aos="fade-left" data-aos-duration="2000">
-                    <h2 class="textDescD" id="title">Project title</h2>
+                    <h2 class="textDescD" id="title1">Project title</h2>
                     <p class="textDescD">Short desc of the project</p>
                 </div>
             </div>
@@ -103,7 +103,7 @@
             <div class=" pres">
 
                 <div class="pres_right textl" data-aos="fade-right" data-aos-duration="2000">
-                    <h2 class="textDescG" id="title">Project title</h2>
+                    <h2 class="textDescG" id="title2">Project title</h2>
                     <p class="textDescG">Short desc of the project</p>
                 </div>
                 <div class="pres_left" data-aos="fade-left" data-aos-duration="2000">
@@ -119,7 +119,7 @@
                     <img src="../image/app1.jpg" class="image" alt="" />
                 </div>
                 <div class="pres_right textr" data-aos="fade-left" data-aos-duration="2000">
-                    <h2 class="textDescD" id="title">Project title</h2>
+                    <h2 class="textDescD" id="title3">Project title</h2>
                     <p class="textDescD">Short desc of the project</p>
                 </div>
             </div>
@@ -159,6 +159,7 @@
     </div>
     <!-- Optional JavaScript -->
     <!-- Bootstrap JS -->
+    <script src="../JS/Accueil.js" type="text/javascript"></script>
     <script src="../JS/Btnlogin.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
