--- a/Final actuel/HTML/Accueil.html
+++ b/Final actuel/HTML/Accueil.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Home Design - Accueil</title>
+    <title>Arch'ISEN - Accueil</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -22,7 +22,7 @@
                     <!-- <span class="sr-only">Toggle navigation</span> -->
                     <span class="icon-bar"><i class="fa fa-angle-double-down mr-1"></i></span>
                 </button>
-                <a class="navbar-brand" href="Accueil.html">Home Design</a>
+                <a class="navbar-brand" href="Accueil.html">Arch'ISEN</a>
                 <span onclick="NightM()"><img src="../image/nightmode.png" alt="" id="moon"></span>
             </div>
             <div class="collapse navbar-collapse" id="mobileNav">
@@ -30,7 +30,7 @@
                 <div><button class="button1" id="login" style="vertical-align:middle"><span>Login</span></button>
                     <button class="button1" id="register" style="vertical-align:middle"><span>register </span></button>
                     <div>
-                         <button class="button1" id="Admin" style="vertical-align:middle"><span>Admin </span></button>
+                        <button class="button1" id="Admin" style="vertical-align:middle"><span>Admin </span></button>
                         <button class="button1" id="logout" style="vertical-align:middle"><span>Logout </span></button>
                     </div>
                     <a class="navbar-links page" href="project.html"> Project</a> <br>
@@ -89,8 +89,8 @@
             </section>
         </div>
         <br>
-        <a href="#">
-            <div class=" pres">
+        <a href="project.html">
+            <div class=" pres" id="Page1">
                 <div class="pres_left" data-aos="fade-right" data-aos-duration="2000">
                     <img src="../image/app1.jpg" class="image" alt="" />
                 </div>
@@ -101,8 +101,8 @@
             </div>
         </a>
         <br>
-        <a href="#">
-            <div class=" pres">
+        <a href="project.html">
+            <div class="pres" id="Page2">
 
                 <div class="pres_right textl" data-aos="fade-right" data-aos-duration="2000">
                     <h2 class="textDescG" id="title2">Project title</h2>
@@ -115,8 +115,8 @@
             </div>
         </a>
         <br>
-        <a href="#">
-            <div class=" pres">
+        <a href="project.html">
+            <div class=" pres" id="Page3">
                 <div class="pres_left" data-aos="fade-right" data-aos-duration="2000">
                     <img src="../image/app1.jpg" class="image" alt="" />
                 </div>
@@ -131,8 +131,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-5 col-xs-12 about-company">
-                        <h2 class="footerTitle2">Home Design</h2>
-                        <p class="pr-5 text-white-50">Home Design est un site d'architecture intérieure pour vous aider à trouver, ou retrouver, le rayon de soleil qui manque à votre chez vous. </p>
+                        <h2 class="footerTitle2">Arch'ISEN</h2>
+                        <p class="pr-5 text-white-50">Arch'ISEN est un site d'architecture intérieure pour vous aider à trouver, ou retrouver, le rayon de soleil qui manque à votre chez vous. </p>
                         <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i class="fa fa-linkedin-square"></i></a></p>
                     </div>
                     <div class="col-lg-3 col-xs-12 links">
