--- a/Final actuel/HTML/HTMLAdminProject.html
+++ b/Final actuel/HTML/HTMLAdminProject.html
@@ -24,7 +24,7 @@
                     <!-- <span class="sr-only">Toggle navigation</span> -->
                     <span class="icon-bar"><i class="fa fa-angle-double-down mr-1"></i></span>
                 </button>
-                <a class="navbar-brand" href="Accueil.html">Home Design</a>
+                <a class="navbar-brand" href="Accueil.html">Arch'ISEN</a>
                 <span onclick="NightM()"><img src="../image/nightmode.png" alt="" id="moon"></span>
             </div>
             <div class="collapse navbar-collapse" id="mobileNav">
@@ -32,7 +32,7 @@
                 <div><button class="button1" id="login" style="vertical-align:middle"><span>Login</span></button>
                     <button class="button1" id="register" style="vertical-align:middle"><span>register </span></button>
                     <div>
-                         <button class="button1" id="Admin" style="vertical-align:middle"><span>Admin </span></button>
+                        <button class="button1" id="Admin" style="vertical-align:middle"><span>Admin </span></button>
                         <button class="button1" id="logout" style="vertical-align:middle"><span>Logout </span></button>
                     </div>
                     <a class="navbar-links page" href="project.html"> Project</a> <br>
