--- a/Final actuel/HTML/project.html
+++ b/Final actuel/HTML/project.html
@@ -12,7 +12,7 @@
     <link href="../CSS/navbar.css" rel="stylesheet" type="text/css" />
     <link href="../CSS/project.css" rel="stylesheet" type="text/css" />
     <link href="../font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <title>Home Design - Projets</title> <!--  Nom du site affiché dans l'onglet  -->
+    <title>Arch'ISEN - Projets</title> <!--  Nom du site affiché dans l'onglet  -->
 
 </head>
 
@@ -24,7 +24,7 @@
                     <!-- <span class="sr-only">Toggle navigation</span> -->
                     <span class="icon-bar"><i class="fa fa-angle-double-down mr-1"></i></span>
                 </button>
-                <a class="navbar-brand" href="Accueil.html">Home design</a>
+                <a class="navbar-brand" href="Accueil.html">Arch'ISEN</a>
                 <span onclick="NightM()"><img src="../image/nightmode.png" alt="" id="moon"></span>
             </div>
             <div class="collapse navbar-collapse" id="mobileNav">
@@ -32,7 +32,7 @@
                 <div><button class="button1" id="login" style="vertical-align:middle"><span>Login</span></button>
                     <button class="button1" id="register" style="vertical-align:middle"><span>register </span></button>
                     <div>
-                         <button class="button1" id="Admin" style="vertical-align:middle"><span>Admin </span></button>
+                        <button class="button1" id="Admin" style="vertical-align:middle"><span>Admin </span></button>
                         <button class="button1" id="logout" style="vertical-align:middle"><span>Logout </span></button>
                     </div>
                     <a class="navbar-links page" href="project.html"> Project</a> <br>
@@ -214,8 +214,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-5 col-xs-12 about-company">
-                        <h2 class="footerTitle2">Home Design</h2>
-                        <p class="pr-5 text-white-50">Home Design est un site d'architecture intérieure pour vous aider à trouver, ou retrouver, le rayon de soleil qui manque à votre chez vous. </p>
+                        <h2 class="footerTitle2">Arch'ISEN</h2>
+                        <p class="pr-5 text-white-50">Arch'ISEN est un site d'architecture intérieure pour vous aider à trouver, ou retrouver, le rayon de soleil qui manque à votre chez vous. </p>
                         <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i class="fa fa-linkedin-square"></i></a></p>
                     </div>
                     <div class="col-lg-3 col-xs-12 links">
