--- a/Final actuel/HTML/register.html
+++ b/Final actuel/HTML/register.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Home Design - S'inscrire</title>
+    <title>Arch'ISEN - S'inscrire</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
